--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pomodoro Study Timer</h1>
+        <h1>🍅 Tomato Timer ⏰</h1>
         <div id="timer-display">
             <span id="time-left">25:00</span>
         </div>
